--- a/.github/workflows/variables.yml
+++ b/.github/workflows/variables.yml
@@ -9,4 +9,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: print the repository variables
-        run: echo "the repository variable is $YEAR"
+        run: echo "the repository variable is ${{ vars.YEAR }}"
